--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hickory-client = "0.25.1"
+hickory-server = "0.25.1"
+tokio = "1.44.2"
+async-trait = "0.1.88"
