--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-hickory-client = "0.25"
-hickory-server = "0.25"
-tokio = "1.44"
+hickory-client = "0.25.0-alpha"
+hickory-server = "0.25.0-alpha"
+tokio = "1.43"
 async-trait = "0.1"
 log = "0.4"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_yml = "0.0.12"
+clap = { version = "4.5", features = ["derive"] }
+tracing-appender = "0.2.3"
