--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2024"
 build = "build.rs"
 
 [dependencies]
-hickory-client = {version = "0.26.0-alpha.1",features = ["https-ring"]}
+hickory-client = { version = "0.26.0-alpha.1", features = ["https-ring", "tls-ring", "quic-ring", "webpki-roots"] }
 hickory-server = "0.26.0-alpha.1"
-tokio = {version = "1" ,features = ["full"]}
+tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
