--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,11 @@ webpki-roots = "1.0.2"
 arc-swap = "1.7.1"
 bytes = "1.10.1"
 rand = "0.9.2"
+hotpath = { version = "0.4.1", optional = true }
+
+
+[features]
+hotpath = ["dep:hotpath", "hotpath/hotpath"]
+hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
+hotpath-alloc-count-total= ["hotpath/hotpath-alloc-count-total"]
+hotpath-off = ["hotpath/hotpath-off"]
