--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ webpki-roots = "1.0.2"
 arc-swap = "1.7.1"
 bytes = "1.10.1"
 rand = "0.9.2"
+crossbeam-queue = "0.3.12"
 hotpath = { version = "0.4.1", optional = true }
 
 
