--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,9 @@ plugins:
     type: forward
     args:
       upstreams:
-        - addr: "223.5.5.5"  # 阿里 DNS
-#          dial_addr: "94.140.14.141"
-#          insecure_skip_verify: true
+        - addr: "tls://dns.google.com"  # 阿里 DNS
+          dial_addr: "8.8.8.8"
+          insecure_skip_verify: true
         # 当配置多个上游服务器时，会自动启用并发模式
         # - addr: "119.29.29.29"  # 腾讯 DNS
         # - addr: "114.114.114.114"  # 114 DNS
