--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ arc-swap = "1.7.1"
 bytes = "1.10.1"
 rand = "0.9.2"
 crossbeam-queue = "0.3.12"
+h2 = "0.4.12"
+http = "1.3.1"
+base64 = "0.22.1"
 hotpath = { version = "0.4.1", optional = true }
 
 
