--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 [dependencies]
 futures = "0.3.31"
 socket2 = "0.6.0"
-hickory-proto = "0.25.2"
+hickory-proto = {version = "0.25.2",features = ["std"]}
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.26.4"
 async-trait = "0.1"
@@ -28,6 +28,9 @@ bytes = "1.10.1"
 rand = "0.9.2"
 crossbeam-queue = "0.3.12"
 h2 = "0.4.12"
+h3 = "0.0.8"
+quinn = "0.11.9"
+h3-quinn = "0.0.10"
 http = "1.3.1"
 base64 = "0.22.1"
 hotpath = { version = "0.4.1", optional = true }
