:recycle: (upstream): optimize H2Connection and connection pool, simplify TLS ALPN

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-log:
-  level: debug
+#log:
+#  level: debug
 
 plugins:
   - tag: forward
@@ -9,6 +9,7 @@ plugins:
         - addr: "https://dns.alidns.com/dns-query"  # 阿里 DNS
           dial_addr: "223.5.5.5"
           insecure_skip_verify: false
+          enable_pipeline: true
         # 当配置多个上游服务器时，会自动启用并发模式
         # - addr: "119.29.29.29"  # 腾讯 DNS
         # - addr: "114.114.114.114"  # 114 DNS
