--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,10 @@ plugins:
     type: forward
     args:
       upstreams:
-        - addr: "quic://172.16.2.53:5366"  # 阿里 DNS
+        - addr: "tcp://dns.alidns.com"  # 阿里 DNS
+#          dial_addr: "223.5.5.5"  # 阿里 DNS
           insecure_skip_verify: true
+          bootstrap: 223.5.5.5
           enable_pipeline: true
         # 当配置多个上游服务器时，会自动启用并发模式
         # - addr: "119.29.29.29"  # 腾讯 DNS
@@ -17,4 +19,4 @@ plugins:
     type: "udp_server"
     args:
       entry: "forward"
-      listen: "0.0.0.0:5366"
+      listen: "0.0.0.0:5367"
