--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ h3-quinn = "0.0.10"
 http = "1.3.1"
 base64 = "0.22.1"
 hotpath = { version = "0.4.1", optional = true }
+thiserror = "2.0"
 
 
 [features]
