--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ plugins:
     type: forward
     args:
       upstreams:
-        - addr: "tcp://dns.alidns.com"  # 阿里 DNS
+        - addr: "udp://dns.alidns.com"  # 阿里 DNS
 #          dial_addr: "223.5.5.5"  # 阿里 DNS
           insecure_skip_verify: true
           bootstrap: 223.5.5.5
