--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,11 @@ quinn = "0.11.9"
 h3-quinn = "0.0.10"
 http = "1.3.1"
 base64 = "0.22.1"
-hotpath = { version = "0.4.1", optional = true }
 thiserror = "2.0"
+fast-socks5 = "0.10.0"
 
+
+hotpath = { version = "0.5.2", optional = true }
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
