--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ socket2 = "0.6.0"
 hickory-proto = {version = "0.25.2",features = ["std"]}
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.26.4"
+rustls-pemfile = "2.2.0"
 async-trait = "0.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
