--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ h3 = "0.0.8"
 quinn = "0.11.9"
 h3-quinn = "0.0.10"
 http = "1.3.1"
+http-body = "1.0"
+http-body-util = "0.1"
 base64 = "0.22.1"
 thiserror = "2.0"
 fast-socks5 = "0.10.0"
