:sparkles: Enhance HTTP server plugin with HTTP/2 and HTTP/3 support
- Added support for HTTP/2 and HTTP/3 in the existing HTTP server plugin for DNS over HTTPS.
- Implemented `http2_server` and `http3_server` modules to handle respective protocols.
- Enhanced the `HttpDispatcher` to route requests appropriately for both HTTP/2 and HTTP/3.
- Updated the plugin configuration to include options for enabling HTTP/3.
- Refactored existing code for improved modularity and maintainability.

Modified files:
- src/plugin/server/http.rs: Updated to include HTTP/2 and HTTP/3 handling.
- src/plugin/server/http/http2_server.rs: New module for HTTP/2 server implementation.
- src/plugin/server/http/http3_server.rs: New module for HTTP/3 server implementation.
- src/plugin/server/mod.rs: Updated to include new HTTP server modules.
- src/plugin/mod.rs: Adjusted to support new server functionalities.
- Cargo.toml: Updated dependencies for HTTP/2 and HTTP/3 support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ fast-socks5 = "0.10.0"
 
 
 hotpath = { version = "0.5.2", optional = true }
+log = "0.4.27"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
