--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ h2 = "0.4.12"
 h3 = "0.0.8"
 quinn = "0.11.9"
 h3-quinn = "0.0.10"
-http-body-util = "0.1"
+http = "1.3.1"
 base64 = "0.22.1"
 thiserror = "2.0"
 fast-socks5 = "0.10.0"
