--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 [dependencies]
 futures = "0.3.31"
 socket2 = "0.6.0"
-hickory-proto = { version = "0.25.2", features = ["std", "__quic", "__tls", "tls-ring"] }
+hickory-proto = { version = "0.25.2", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.26.4"
 rustls-pemfile = "2.2.0"
