--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 [dependencies]
 futures = "0.3.31"
 socket2 = "0.6.0"
-hickory-proto = { version = "0.25.2", features = ["std"] }
+hickory-proto = { version = "0.25.2" }
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.26.4"
 rustls-pemfile = "2.2.0"
@@ -36,7 +36,6 @@ http = "1.3.1"
 base64 = "0.22.1"
 thiserror = "2.0"
 fast-socks5 = "0.10.0"
-
 
 hotpath = { version = "0.5.2", optional = true }
 
