--- a/config.yaml
+++ b/config.yaml
@@ -6,12 +6,12 @@ plugins:
     type: forward
     args:
       upstreams:
-        - addr: "tcp://8.8.8.8"  # 阿里 DNS
+        - addr: "223.5.5.5"  # 阿里 DNS
 #          dial_addr: "223.5.5.5"  # 阿里 DNS
-          socks5: "127.0.0.1:7897"
-          insecure_skip_verify: true
-          bootstrap: 223.5.5.5
-          enable_pipeline: true
+#          socks5: "127.0.0.1:7897"
+          # insecure_skip_verify: true
+          # bootstrap: 223.5.5.5
+          # enable_pipeline: true
         # 当配置多个上游服务器时，会自动启用并发模式
         # - addr: "119.29.29.29"  # 腾讯 DNS
         # - addr: "114.114.114.114"  # 114 DNS
