feat(cache): add bincode dependency and enhance cache functionality with loading and dumping mechanisms

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,12 @@
-#log:
-#  level: debug
+log:
+ level: debug
 
 plugins:
   - tag: forward
     type: forward
     args:
       upstreams:
-        - addr: "223.5.5.5"  # 阿里 DNS
+        - addr: "8.8.8.8"  # 阿里 DNS
           # dial_addr: "223.5.5.5"  # 阿里 DNS
           # socks5: "127.0.0.1:7897"
           # insecure_skip_verify: true
