--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yml = "0.0.12"
+bincode = "1.3.3"
 clap = { version = "4.5", features = ["derive"] }
 tracing-appender = "0.2.3"
 lazy_static = "1.5"
