--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ http = "1.3.1"
 base64 = "0.22.1"
 thiserror = "2.0"
 fast-socks5 = "0.10.0"
+inventory = "0.3"
 
 hotpath = { version = "0.5.2", optional = true }
 
