feat(sequence): implement quick-setup registration and sequence runtime build (closes #8)
- add PluginFactory::quick_setup entry for type-based quick-setup creation
- add sequence quick-setup syntax parsing for `type [param]` alongside `$tag`
- resolve quick-setup nodes in sequence chain build with synthetic tags
- initialize quick-setup plugins during sequence init and retain for destroy lifecycle
- keep startup fail-fast semantics: panic on init build failure and reject empty rules

--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ plugins:
     type: sequence
     args:
       - exec: $cache
-      - exec: $forward
+      - exec: forward 223.5.5.5
 
 
   - tag: "udp_server"
