feat(domain_set): implement high-performance domain_set data plugin
Support exps/files/sets with shared set reuse.

Implement full/domain/regexp/keyword matching with priority: full > domain > regexp > keyword.

Optimize hot path using reverse-label trie, ahash, aho-corasick, regex_set, smallvec, and flattened set references.

Add precise file parse errors with line numbers, unit tests, and million-rule benchmark.

Closes #23

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,11 @@ base64 = "0.22"
 thiserror = "2.0"
 fast-socks5 = "1.0.0"
 inventory = "0.3"
+regex = "1.12.2"
+aho-corasick = "1.1.4"
+ahash = "0.8.12"
+smallvec = "1.15.1"
+
 hotpath =  "0.13.0"
 
 [features]
