feat(matcher): complete P1-01/P1-02 query and response matcher capabilities
- implement query-side matching capabilities required by #9:
  qtype / qclass / qname(domain) / client_ip / ecs-equivalent rule parsing path,
  multi-condition AND semantics, and sequence matches integration
- implement response-side matching capabilities required by #10:
  rcode / resp_ip / cname matching on answer/authority/additional sections
- define clear empty-response behavior and keep any-record-hit semantics for multi-record responses
- split matcher implementations into dedicated plugins (one matcher per file) and remove monolithic query/response matcher coupling
- optimize matcher hot paths with low-allocation rule parsing and AHashSet-based mark storage
- unify shared matcher helpers and extract common DNS utilities for rcode parsing/response construction/record extraction
- update README/README_CN/config examples and add/adjust tests for sequence linkage and matcher semantics

Closes #9
Closes #10

--- a/config.yaml
+++ b/config.yaml
@@ -33,9 +33,24 @@ plugins:
   - tag: seq
     type: sequence
     args:
-      - exec: $cache
+      - matches: ["qtype A", "qname example.com"]
+        exec: $cache
       - exec: forward 223.5.5.5
 
+  # - tag: only_a
+  #   type: qtype
+  #   args: ["A"]
+  #
+  # - tag: has_cached_resp
+  #   type: has_resp
+  #
+  # - tag: rollout_gate
+  #   type: random
+  #   args: ["0.1"]
+  #
+  # - tag: only_noerror
+  #   type: rcode
+  #   args: ["NOERROR"]
 
   - tag: "udp_server"
     type: "udp_server"
