--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,9 @@ smallvec = "1.15.1"
 
 hotpath =  "0.13.0"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+neli = "0.7.4"
+
 [features]
 hotpath = ["hotpath/hotpath"]
 hotpath-alloc = ["hotpath/hotpath-alloc"]
