--- a/config.yaml
+++ b/config.yaml
@@ -15,8 +15,8 @@ plugins:
         # 当配置多个上游服务器时，会自动启用并发模式
         # - addr: "119.29.29.29"  # 腾讯 DNS
         # - addr: "114.114.114.114"  # 114 DNS
-  - tag: print
-    type: print
+  - tag: debug_print
+    type: debug_print
     args:
       before:
         - from {src_addr}
